# ubrl

./: .envrc  .gitignore  README.md  dev-requirements.in  dev-requirements.txt  flake.nix  pyproject.toml  quarto.yml  requirements.in  requirements.txt  shell.nix
examples/: cartpole_tune_override.yaml  cartpole_tune_override_awr.yaml  cartpole_tune_override_easy.yaml  gym_example.py  hf_llm_example.py  humanoid_tune_override_awr.yaml  pendulum_awr_best.yaml  pendulum_ppo_best.yaml  pendulum_tune_override.yaml  pendulum_tune_override_awr.yaml
notes/: agent_api.qmd  plot_pendulum_checkpoints.qmd  quarto_test.qmd  two_hot.qmd
scripts/: build-dev-container.bat  dev.containerfile  entrypoint.sh  install_torch_cpu.sh  plot_pendulum_checkpoint.ipynb  run-dev-container.bat
src/outrl/: __init__.py  accel.py  agent.py  config.py  dists.py  env.py  fragment_buffer.py  gym_env.py  gym_utils.py  nn.py  ppo.py  rl.py  rl_old.py  sampler.py  stochastic_mlp_agent.py  torch_utils.py  utils.py
src/ubrl/: __init__.py  accel.py  cli.py  config.py  engine.py  gym_utils.py  miniquarto.py  torch_cluster.py  torch_trainer.py  torch_utils.py  two_hot.py
tests/: test_examples.py  test_rl.py  test_torch_utils.py
