[project]
name = "ubrl"
version = "0.1.0"
description = "Unbound Reinforcement Learning of Multimodal Agents"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "K.R. Zentner", email = "krzentner@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "tqdm>=4.0",
  "optuna>=3.5.0",
  "simple-parsing>=0.1.5",
  "torch>=2.0",
  "noko[recommended]>=0.3.1",
]

[project.urls]
"Homepage" = "https://github.com/krzentner/ubrl"
"Bug Reports" = "https://github.com/krzentner/ubrl/issues"
"Source" = "https://github.com/krzentner/ubrl"


# Below is poetry setup for developing this package
[tool.poetry.dependencies]
python = "^3.8,<3.13"
optuna = "^3.5.0"
# torch is optional because it's often preferable to install a custom version
# from what the poetry resolver will choose (cpu, cuda, etc.)
torch = { version = "^2.0", optional = true }
# Gym (and mujoco) is only necessary to run the gym examples.
gym = { version = "0.17.3", optional = true }
mujoco-py = { version = ">=2.1,<2.2", optional = true }
simple-parsing = "^0.1.5"
tensorboardx = {version = "^2.6.2.2", extras = ["tensorboardX"]}
gymnasium = { version = "^0.29.1", optional = true }
optuna-dashboard = {version = "^0.15.1", extras = ["optuna"]}

[tool.poetry.group.dev.dependencies]
py-spy = "^0.3.14"
pytest = "^7.3.1"
ipdb = "^0.13.13"
visdom = "^0.2.4"

[tool.poetry.group.torch.dependencies]
torch = {version = "^2.2.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.17.1+cpu", source = "pytorch_cpu"}

[tool.poetry.extras]
torch = ["torch"]
gym = ["gym", "mujoco-py"]
gymnasium = ["gymnasium"]

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.pyright]
include = ["src"]
venv = ".venv"

[tool.poetry]
name = "ubrl"
version = "0.1.0"
description = ""
authors = ["K.R. Zentner <krzentner@gmail.com>"]
